--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                         <p>You know the rules: rock beats scissors, scissors slices paper, and paper covers rock. 
                             A full on cycle, yo.
                         </p>
-                        <p>This game works directly with the alert box (the annoying box that declares you the winner of something random like a Walmart gift card of $25,000.00 or a bagel).</p>
+                        <p>This game works directly with the alert box (the annoying box that declares you the winner of something random like a Walmart gift card of $25,000.00 or a sprouted grain everything bagel with avocado spread).</p>
                         <p>Once you're gassed up and ready to throw hands
                             in the biggest showdown of the century, go
                             ahead and toggle <b>"Begin Game"</b> to, well,
-                            begin the game. Press <b>"Start Over"</b> to
+                            begin the game of 5 rounds. Press <b>"Start Over"</b> to
                             restart the scoreboard.
                             Type <b>"yes"</b> or <b>"no"</b>, <b>"rock"</b>, <b>"paper"</b>, or <b>"scissors"</b> when prompted. Good luck!
                         </p>
@@ -40,9 +40,13 @@
                 <div id = "scoreboard">
                     <section>
                         <h3>Scoreboard</h3>
-                        <p>Player Score: <span id = 'player'>0</span></p>
-                        <p>Computer Score: <span id = 'computer'>0</span></p>
+                            <p>Player Score: <span id = 'player'>0</span></p>
+                            <p>Computer Score: <span id = 'computer'>0</span></p>
+                            <p id = "result"></p>
+                        <h3 class = "marg">Draws</h3>
+                            <p>Amount of times occured: <span id = 'draw'>0</span></p>
                     </section>
+
                 </div>
             </div>
         </main>
