Added color to the mix

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                         </p>
                         <div class = "game">
                             <h2>Ready to play?</h2>
-                        <div class = "btn">
-                            <button onclick = 'playRound()'>Begin Game</button>
-                            <button onclick = 'startOver()'>Start Over</button>
-                        </div>
+                        <section>
+                            <button class = "btn" onclick = 'playRound()'>Begin Game</button>
+                            <button class = "btn" onclick = 'startOver()'>Start Over</button>
+                        </section>
                         </div>
                         </section>
                     </section>
