Need to add media Queries to compensate for screen layouts

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <p>Once you're gassed up and ready to throw hands
                             in the biggest showdown of the century, go
                             ahead and toggle <b>"Begin Game"</b> to, well,
-                            begin the game of 5 rounds. Press <b>"Start Over"</b> to
+                            begin the game conssisting of 5 rounds. Press <b>"Start Over"</b> to
                             restart the scoreboard.
                             Type <b>"yes"</b> or <b>"no"</b>, <b>"rock"</b>, <b>"paper"</b>, or <b>"scissors"</b> when prompted. Good luck!
                         </p>
