Added aesthetically pleasing changes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <p>You know the rules: rock beats scissors, scissors slices paper, and paper covers rock. 
                             A full on cycle, yo.
                         </p>
-                        <p>This game works directly with the alert box (the annoying box that declares you the winner of something random like a Walmart gift card of $25,000.00 or a sprouted grain everything bagel with avocado spread).</p>
+                        <p>This game works directly with the alert box (the annoying box that occasionally declares you the winner of something random like a Walmart gift card of $25,000.00 or a sprouted grain everything bagel with avocado spread).</p>
                         <p>Once you're gassed up and ready to throw hands
                             in the biggest showdown of the century, go
                             ahead and toggle <b>"Begin Game"</b> to, well,
@@ -29,7 +29,7 @@
                         </p>
                         <div class = "game">
                             <h2>Ready to play?</h2>
-                        <section>
+                        <section class = "btn-group">
                             <button class = "btn" onclick = 'playRound()'>Begin Game</button>
                             <button class = "btn" onclick = 'startOver()'>Start Over</button>
                         </section>
