--- a/index.html
+++ b/index.html
@@ -16,17 +16,20 @@
                 </div>
                 <div class = "center">  
                     <section>
-                        <p>You know the rules: rock beats scissors, scissors slices paper, and paper covers rock. 
-                            A full on cycle, yo.
-                        </p>
-                        <p>This game works directly with the alert box (the annoying box that occasionally declares you the winner of something random like a Walmart gift card of $25,000.00 or a sprouted grain everything bagel with avocado spread).</p>
-                        <p>Once you're gassed up and ready to throw hands
-                            in the biggest showdown of the century, go
-                            ahead and toggle <b>"Begin Game"</b> to, well,
-                            begin the game conssisting of 5 rounds. Press <b>"Start Over"</b> to
-                            restart the scoreboard.
-                            Type <b>"yes"</b> or <b>"no"</b>, <b>"rock"</b>, <b>"paper"</b>, or <b>"scissors"</b> when prompted. Good luck!
-                        </p>
+                        <div class = "description">
+                            <p>You know the rules: rock beats scissors, scissors slices paper, and paper covers rock. 
+                                A full on cycle, yo.
+                            </p>
+                            <p>This game works directly with the alert box (the annoying box that occasionally declares you the winner of something random like a Walmart gift card of $25,000.00 or a sprouted grain everything bagel with avocado spread).</p>
+                            <p>Once you're gassed up and ready to throw hands
+                                in the biggest showdown of the century, go
+                                ahead and toggle <b>"Begin Game"</b> to, well,
+                                begin the game conssisting of 5 rounds. Press <b>"Start Over"</b> to
+                                restart the scoreboard.
+                                Type <b>"yes"</b> or <b>"no"</b>, <b>"rock"</b>, <b>"paper"</b>, or <b>"scissors"</b> when prompted.
+                            </p>
+                            <p>Good Luck!</p>
+                        </div>
                         <div class = "game">
                             <h2>Ready to play?</h2>
                         <section class = "btn-group">
