Better organized and cleaned the code as well as updated function names for better accessability.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <h2>Ready to play?</h2>
                         <section class = "btn-group">
                             <button class = "btn" onclick = 'playRound()'>Begin Game</button>
-                            <button class = "btn" onclick = 'startOver()'>Start Over</button>
+                            <button class = "btn" onclick = 'scoreBoard.startOver()'>Start Over</button>
                         </section>
                         </div>
                         </section>
