--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel = "stylesheet" href = "reset.css">
         <link rel = "stylesheet" href = "style.css">
         <!--A simple test to better understand how forms can be manipulated in the DOM using Javascript-->
         <title>rock-paper-scissors</title>
